# stock_predict_database

./: .gitignore  CLAUDE.md  alembic.ini  docker-compose.yml  env.example  init-db.sql  init-kafka-topics.sh  pyproject.toml
DataFrame/: postmaster.pid
DataFrame/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
alembic/: README  env.py
alembic/versions/: 00a7b774fe59_add_predict.py  01706b4ad2b4_fix_strategy_table_add_weight4.py  1b58beac5c63_add_password_hash.py  22486c0131ef_fix_strategy_table_add_weight.py  28a5368de9dc_add_stocks.py  299c0143e752_add_columns_prediction_is_nxt.py  29a8fc5377da_fix_strategy_table_add_weight3.py  2c4c6175cd87_add_target_sell.py  3be13f1bb991_init.py  401f90642e4f_add_model_registry_table.py  4664a9c3361c_init.py  4a00e4346074_update_market_gap.py  523f8f56492e_fix_strategy_table4.py  532e0081e248_add_user_account_is_del.py  5f84e1dacd10_add_strategy_table.py  688f004ca1b3_fix_strategy_table5.py  850ccf465b16_fix_fk_strategy_id.py  8780debdacfd_add_strategy_id_back.py  96837d2fdf78_fix_strategy_table.py  97a1cac327e0_add_account_name_and_type.py  9b88644afe68_add_minutes_candle.py  9efb1cd96204_init.py  a77365d5656b_init.py  b783be5e546d_fix_strategy_table_add_order_table.py  b9a4a70bf1c8_fix_strategy_table3.py  bbcc7b4afb5c_change_user_strategy_fk_from_user_id_to_.py  c2e402d38147_fix_usertable_hts_id.py  c661ec196c07_add_candle_table.py  cd9ac260db19_add_role_to_users.py  d599c7d66b9b_fix_strategy_table_add_weight2.py  (+4 more)
database/: __init__.py  base.py  model_registry.py  stocks.py  strategy.py  users.py
(+444 files in other folders)
